--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/animations": "~8.2.4",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "~9.1.0",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
     "@angular/platform-browser": "~8.2.4",
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.2",
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~8.2.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
